--- a/prediction_notebooks/baku_prediction.ipynb
+++ b/prediction_notebooks/baku_prediction.ipynb
@@ -3379,7 +3379,8 @@
     }
    ],
    "source": [
-    "coefs.sort_values(by='Coefficient',ascending=False)"
+    "coefs.sort_values(by='Coefficient',ascending=False)\n",
+    "#Check coefficients"
    ]
   }
  ],
