Initialise US GP prediction notebook

--- a/prediction_notebooks/usgp_prediction.ipynb
+++ b/prediction_notebooks/usgp_prediction.ipynb
@@ -175,6 +175,7 @@
     "    'Austria': 'Medium DF',\n",
     "    'Netherlands': 'Medium DF',\n",
     "    'Spain': 'Low DF',\n",
+    "    'United States': 'Low DF',\n",
     "    'Japan': 'Low DF',\n",
     "    'Saudi Arabia': 'Low DF',\n",
     "    'Baku': 'Very Low DF',\n",
@@ -196,6 +197,7 @@
     "    'Austria': 3,\n",
     "    'Netherlands': 3,\n",
     "    'Spain': 2,\n",
+    "    'United States': 2,\n",
     "    'Japan': 2,\n",
     "    'Saudi Arabia': 2,\n",
     "    'Baku': 1,\n",
