Update Downforce Classification

--- a/prediction_notebooks/usgp_prediction.ipynb
+++ b/prediction_notebooks/usgp_prediction.ipynb
@@ -146,66 +146,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ntrack_downforce_mapping = {\\n    'Monaco': 'Very High DF',\\n    'Singapore': 'Very High DF',\\n    'Canada': 'High DF',\\n    'Silverstone': 'High DF',\\n    'Imola': 'High DF',\\n    'Hungary': 'Medium DF',\\n    'Australia': 'Medium DF',\\n    'Bahrain': 'Medium DF',\\n    'Austria': 'Medium DF',\\n    'Netherlands': 'Medium DF',\\n    'Spain': 'Low DF',\\n    'Japan': 'Low DF',\\n    'Saudi Arabia': 'Low DF',\\n    'Baku': 'Very Low DF',\\n    'Belgium': 'Very Low DF',\\n    'Monza': 'Very Low DF',\\n    'Miami': 'Very Low DF',\\n}\\n\\nNumerical mapping:\\ndownforce_numeric_mapping = {\\n    'Monaco': 5,\\n    'Singapore': 5,\\n    'Canada': 4,\\n    'Silverstone': 4,\\n    'Imola': 4,\\n    'Hungary': 3,\\n    'Australia': 3,\\n    'Bahrain': 3,\\n    'Austria': 3,\\n    'Netherlands': 3,\\n    'Spain': 2,\\n    'Japan': 2,\\n    'Saudi Arabia': 2,\\n    'Baku': 1,\\n    'Belgium': 1,\\n    'Monza': 1,\\n    'Miami': 1,\\n}\\n\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "track_downforce_mapping = {\n",
-    "    'Monaco': 'Very High DF',\n",
-    "    'Singapore': 'Very High DF',\n",
-    "    'Canada': 'High DF',\n",
-    "    'Silverstone': 'High DF',\n",
-    "    'Imola': 'High DF',\n",
-    "    'Hungary': 'Medium DF',\n",
-    "    'Australia': 'Medium DF',\n",
-    "    'Bahrain': 'Medium DF',\n",
-    "    'Austria': 'Medium DF',\n",
-    "    'Netherlands': 'Medium DF',\n",
-    "    'Spain': 'Low DF',\n",
-    "    'United States': 'Low DF',\n",
-    "    'Japan': 'Low DF',\n",
-    "    'Saudi Arabia': 'Low DF',\n",
-    "    'Baku': 'Very Low DF',\n",
-    "    'Belgium': 'Very Low DF',\n",
-    "    'Monza': 'Very Low DF',\n",
-    "    'Miami': 'Very Low DF',\n",
-    "}\n",
+    "After conferring with people within the domain, I realised that my method of categorising downforce (reverse ranking Hamilton's 2022 top speeds for qualifying sessions) was not very accurate, as it classified Canada as a high downforce circuit when it really is a low downforce circuit. \n",
     "\n",
-    "Numerical mapping:\n",
+    "To fix this problem, I decided to rely on domain knowledge and used Pirelli's classification of circuits by downforce, which you can find [here](https://f1bythenumbers.com/2019-f1-season-tracks-according-to-pirelli/).\n",
+    "\n",
+    "Here is the mapping:\n",
+    "\n",
     "downforce_numeric_mapping = {\n",
-    "    'Monaco': 5,\n",
-    "    'Singapore': 5,\n",
-    "    'Canada': 4,\n",
-    "    'Silverstone': 4,\n",
-    "    'Imola': 4,\n",
-    "    'Hungary': 3,\n",
-    "    'Australia': 3,\n",
-    "    'Bahrain': 3,\n",
-    "    'Austria': 3,\n",
-    "    'Netherlands': 3,\n",
-    "    'Spain': 2,\n",
-    "    'United States': 2,\n",
-    "    'Japan': 2,\n",
-    "    'Saudi Arabia': 2,\n",
-    "    'Baku': 1,\n",
-    "    'Belgium': 1,\n",
-    "    'Monza': 1,\n",
-    "    'Miami': 1,\n",
-    "}\n",
-    "\"\"\""
+    "    'Australia':4,\n",
+    "    'Bahrain':2,\n",
+    "    'China':2,\n",
+    "    'Baku':2,\n",
+    "    'Spain':4,\n",
+    "    'Monaco':5,\n",
+    "    'Canada':2,\n",
+    "    'Austria':3,\n",
+    "    'Silverstone':4,\n",
+    "    'Hungary':4,\n",
+    "    'Belgium':2,\n",
+    "    'Monza':1,\n",
+    "    'Singapore':5,\n",
+    "    'Japan':3,\n",
+    "    'United States':3,\n",
+    "    'Mexico':4,\n",
+    "    'Brazil':4,\n",
+    "    'Abu Dhabi':3,\n",
+    "    'Saudi Arabia': 2, // From here onwards, Pirelli does not have the classification but I've assigned values based on similar circuits\n",
+    "    'Miami': 2,\n",
+    "    'Imola':4,\n",
+    "    'Netherlands':4\n",
+    "}\n"
    ]
   },
   {
