Update Downforce Categorisation according to Pirelli

--- a/prediction_notebooks/usgp_prediction.ipynb
+++ b/prediction_notebooks/usgp_prediction.ipynb
@@ -155,6 +155,7 @@
     "\n",
     "Here is the mapping:\n",
     "\n",
+    "```python\n",
     "downforce_numeric_mapping = {\n",
     "    'Australia':4,\n",
     "    'Bahrain':2,\n",
@@ -178,7 +179,8 @@
     "    'Miami': 2,\n",
     "    'Imola':4,\n",
     "    'Netherlands':4\n",
-    "}\n"
+    "}\n",
+    "```\n"
    ]
   },
   {
