--- a/extras/baku_prediction copy.ipynb
+++ b/extras/baku_prediction copy.ipynb
@@ -189,7 +189,87 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "Loaded Data for 2024 Singapore\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Australia\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 China\n",
+      "--------------------------------------------------\n",
+      "Skipping FP2 for 2025 China: Session type 'FP2' does not exist for this event\n",
+      "Skipping FP3 for 2025 China: Session type 'FP3' does not exist for this event\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Japan\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Bahrain\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Saudi Arabia\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Miami\n",
+      "--------------------------------------------------\n",
+      "Skipping FP2 for 2025 Miami: Session type 'FP2' does not exist for this event\n",
+      "Skipping FP3 for 2025 Miami: Session type 'FP3' does not exist for this event\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Imola\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Monaco\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Spain\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Canada\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Austria\n",
+      "--------------------------------------------------\n",
+      "Got Best Race Pace\n",
+      "--------------------------------------------------\n",
+      "Loaded Data for 2025 Silverstone\n",
+      "--------------------------------------------------\n",
+      "Skipping FP2 for 2025 Silverstone: The data you are trying to access has not been loaded yet. See `Session.load`\n",
+      "Skipping FP3 for 2025 Silverstone: The data you are trying to access has not been loaded yet. See `Session.load`\n",
+      "Got Best Race Pace\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"['IsPersonalBest', 'Session'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 91\u001b[39m\n\u001b[32m     88\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mGot Best Race Pace\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     89\u001b[39m best_race_pace\n\u001b[32m---> \u001b[39m\u001b[32m91\u001b[39m \u001b[43mbest_race_pace\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mIsPersonalBest\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSession\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     92\u001b[39m pace_mapping=best_race_pace.set_index(\u001b[33m'\u001b[39m\u001b[33mDriver\u001b[39m\u001b[33m'\u001b[39m)[\u001b[33m'\u001b[39m\u001b[33mLapTime (s)\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     94\u001b[39m cur_results[\u001b[33m'\u001b[39m\u001b[33mBest_Pace_seconds\u001b[39m\u001b[33m'\u001b[39m] = cur_results[\u001b[33m'\u001b[39m\u001b[33mDriver\u001b[39m\u001b[33m'\u001b[39m].map(pace_mapping)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/f1-winner/venv/lib/python3.12/site-packages/pandas/core/frame.py:5588\u001b[39m, in \u001b[36mDataFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   5440\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdrop\u001b[39m(\n\u001b[32m   5441\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   5442\u001b[39m     labels: IndexLabel | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m   5449\u001b[39m     errors: IgnoreRaise = \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   5450\u001b[39m ) -> DataFrame | \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   5451\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   5452\u001b[39m \u001b[33;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[32m   5453\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   5586\u001b[39m \u001b[33;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[32m   5587\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m5588\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   5589\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5590\u001b[39m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5591\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5592\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5593\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5594\u001b[39m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5595\u001b[39m \u001b[43m        \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5596\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/f1-winner/venv/lib/python3.12/site-packages/pandas/core/generic.py:4807\u001b[39m, in \u001b[36mNDFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   4805\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes.items():\n\u001b[32m   4806\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4807\u001b[39m         obj = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_drop_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4809\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[32m   4810\u001b[39m     \u001b[38;5;28mself\u001b[39m._update_inplace(obj)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/f1-winner/venv/lib/python3.12/site-packages/pandas/core/generic.py:4849\u001b[39m, in \u001b[36mNDFrame._drop_axis\u001b[39m\u001b[34m(self, labels, axis, level, errors, only_slice)\u001b[39m\n\u001b[32m   4847\u001b[39m         new_axis = axis.drop(labels, level=level, errors=errors)\n\u001b[32m   4848\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4849\u001b[39m         new_axis = \u001b[43maxis\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4850\u001b[39m     indexer = axis.get_indexer(new_axis)\n\u001b[32m   4852\u001b[39m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[32m   4853\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/f1-winner/venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:7136\u001b[39m, in \u001b[36mIndex.drop\u001b[39m\u001b[34m(self, labels, errors)\u001b[39m\n\u001b[32m   7134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mask.any():\n\u001b[32m   7135\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m errors != \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m7136\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask].tolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not found in axis\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   7137\u001b[39m     indexer = indexer[~mask]\n\u001b[32m   7138\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.delete(indexer)\n",
+      "\u001b[31mKeyError\u001b[39m: \"['IsPersonalBest', 'Session'] not found in axis\""
+     ]
+    }
+   ],
    "source": [
     "# Build Model Train Data\n",
     "# To be used for min-max normalization\n",
@@ -302,10 +382,10 @@
     "        #---------------------------------------------------------------\n",
     "        \n",
     "        #---------------------------IS IT BAKU?-------------------------\n",
-    "        if race!='Baku':\n",
-    "            cur_results['Is_Baku']=0\n",
+    "        if race!='Singapore':\n",
+    "            cur_results['Is_Singapore']=0\n",
     "        else:\n",
-    "            cur_results['Is_Baku']=1\n",
+    "            cur_results['Is_Singapore']=1\n",
     "        #---------------------------------------------------------------\n",
     "        \n",
     "        #-----------------------MAP DOWNFORCE LEVELS---------------------\n",
@@ -1607,7 +1687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv(\"../data/train_df_baku.csv\")"
+    "# train_df.to_csv(\"../data/tr.csv\")"
    ]
   },
   {
@@ -1733,7 +1813,7 @@
     "X_init = X_init.fillna(0)\n",
     "\n",
     "# Define categorical columns that should NOT be normalized\n",
-    "categorical_columns = ['Year_encoded','Is_Baku', 'Downforce_Level', 'TeamId_encoded', 'Race_encoded','Rain']\n",
+    "categorical_columns = ['Year_encoded','Is_Singapore', 'Downforce_Level', 'TeamId_encoded', 'Race_encoded','Rain']\n",
     "\n",
     "# Identify columns to normalize\n",
     "continuous_columns = [col for col in X_init.columns if col not in categorical_columns]\n",
